--- a/src/main/resources/templates/employees/employee-list.html
+++ b/src/main/resources/templates/employees/employee-list.html
@@ -19,6 +19,11 @@
 		<h3>Employee List</h3>
 		<hr>
 		
+		<a th:href="@{/employees/showFormForAdd}"
+			class="btn btn-primary btn-sm mb-3">
+			Add Employee
+		</a>
+		
 		<table class="table table-bordered table-striped">
 		
 			<thead class="thead-dark">
