--- a/src/main/resources/templates/employees/employee-form.html
+++ b/src/main/resources/templates/employees/employee-form.html
@@ -24,6 +24,9 @@
 		<form action="#" th:action="@{/employees/save}"
 						 th:object="${employee}" method="POST">
 						 
+			<!-- hidden form field to handle update process -->
+			<input type="hidden" th:field="*{id}" />
+						 
 			<input type="text" th:field="*{firstName}"
 					class="form-control mb-4 col-4" placeholder="First Name">
 					
