--- a/src/main/resources/templates/employees/employee-list.html
+++ b/src/main/resources/templates/employees/employee-list.html
@@ -46,6 +46,11 @@
 							class="btn btn-info btn-sm">
 							Update
 						</a>
+						<a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+							class="btn btn-danger btn-sm"
+							onclick="if(!(confirm('Please confirm you want to delete the employee'))) return false">
+							Delete
+						</a>
 					</td>
 				</tr>
 			
