--- a/src/main/resources/templates/employees/employee-list.html
+++ b/src/main/resources/templates/employees/employee-list.html
@@ -19,10 +19,20 @@
 		<h3>Employee List</h3>
 		<hr>
 		
-		<a th:href="@{/employees/showFormForAdd}"
-			class="btn btn-primary btn-sm mb-3">
-			Add Employee
-		</a>
+		<form th:action="@{/employees/search}" class="form-inline">
+		
+			<a th:href="@{/employees/showFormForAdd}"
+				class="btn btn-primary btn-sm mb-3">
+				Add Employee
+			</a>
+			
+			<input type="search" name="employeeName" placeholder="Search by name"
+					class="form-control ml-5 mr-sm-2 mb-3" />
+			<button type="submit" class="btn btn-success mb-3">
+				Search
+			</button>
+			
+		</form>
 		
 		<table class="table table-bordered table-striped">
 		
